<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodger_blue"
    tools:context=".activity.NSMainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/new_star"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="116dp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tileText"
                android:layout_alignParentLeft="true"
                android:backgroundTint="@color/teal_200"
                android:text="@string/sign_up"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="275dp" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tileText"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/teal_200"
                android:text="@string/sgn_in"
                tools:layout_editor_absoluteX="287dp"
                tools:layout_editor_absoluteY="275dp" />

            <Button
                android:id="@+id/skipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/signInButton"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/teal_200"
                android:text="@string/skip"
                tools:layout_editor_absoluteX="156dp"
                tools:layout_editor_absoluteY="357dp" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>