<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodger_blue"
    android:paddingTop="@dimen/layout_padding">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/userNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/edit_text_margin"
                android:layout_toRightOf="@id/userNameTextView"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameLayout"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/edit_text_margin"
                android:layout_toRightOf="@id/passwordTextView"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size" />

        </RelativeLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/button_margin"
            android:text="@string/login"
            android:textSize="@dimen/title_size" />

    </RelativeLayout>
</RelativeLayout>